# cloth_simulator_rust

./: .gitignore  Cargo.toml  eigen_build.rs
benches/: bvh_benchmark.rs  mesh_benchmark.rs
shaders/: default_shader.frag  face_orientation.frag  face_orientation.vert  shader_2D_smooth_color.vert  test_shader.fs  test_shader.vs  text.frag  text.vert
src/: bvh.rs  camera.rs  drawable.rs  eigen.rs  gl_mesh.rs  gpu_immediate.rs  lib.rs  main.rs  mesh.rs  meshreader.rs  meshrewrite.rs  shader.rs  simulation.rs  text.rs  util.rs
