[package]
name = "cloth_simulator_rust"
version = "0.1.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
nalgebra = "0.24.0"
nalgebra-glm = "0.10.0"
rand = "0.8.2"
itertools = "0.10.0"
[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"