[package]
name = "cloth_simulator_rust"
version = "0.1.0"
authors = ["ishbosamiya <ishbosamiya@gmail.com>"]
edition = "2018"
build = "eigen_build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
nalgebra = "0.24.0"
nalgebra-glm = "0.10.0"
rand = "0.8.2"
itertools = "0.10.0"
generational-arena = "0.2.8"
criterion = "0.3.4"
cpp = "0.5"
lazy_static = "1.4.0"

[build-dependencies]
cpp_build = "0.5"

[[bench]]
name = "mesh_benchmark"
harness = false

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"